git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@189 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -1,6 +1,12 @@
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 Release notes:
+
+
+For instructions on how to upgrade, see:
+http://ifdefined.com/readme.html#upgrading
+
+
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
@@ -36,7 +42,7 @@ User level stuff
 
 
 -----------------------------------------------------------------------
-Version 2.9.3   10/04/2008 
+Version 2.9.3   10/05/2008 
 -----------------------------------------------------------------------
 
 To upgrade to this version, change your Web.config from this:
