git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@195 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -16,7 +16,12 @@ CC field.
 * Fixed bug were adding an attachment failed because of null content
 type.
 
+* WhatsNew - doesn't obey permissions
 
+make sure new files are added to CVS, zip
+
+EnableWhatsNewPage=1
+WhatsNewPageIntervalInSeconds=30
 
 ticker?
 
