git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@225 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -41,6 +41,16 @@ blog about lucene.net
 
 
 -----------------------------------------------------------------------
+Version 2.9.8   10/XX/2008 
+-----------------------------------------------------------------------
+
+When the popup just has history, it doesn't look right
+
+creator shouldn't be hotlink when view only, and maybe never.
+
+* Some cosmetic changes.  
+
+-----------------------------------------------------------------------
 Version 2.9.7   10/18/2008 
 -----------------------------------------------------------------------
 
