git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@227 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -13,6 +13,7 @@ Corey's TO DO list:
 
 
 * allow the command line of SVN to be configurable
+
 * add settings for turning off printing of change history.
 
 * auto subscribe if you modified bug
@@ -52,6 +53,9 @@ email hotlinks in view only?, like creator
 
 * added 
 DisplayAnotherButtonInEditBugPage
+
+* added
+SubversionAdditionalArgs
 
 -----------------------------------------------------------------------
 Version 2.9.7   10/18/2008 
