git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@233 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -42,6 +42,14 @@ blog about lucene.net
 
 
 -----------------------------------------------------------------------
+Version 2.9.98   11/XX/2008 
+-----------------------------------------------------------------------
+
+* relationships in print?
+* change history in print?
+* images in print?
+
+-----------------------------------------------------------------------
 Version 2.9.8   10/25/2008 
 -----------------------------------------------------------------------
 
