git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@234 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -45,6 +45,9 @@ blog about lucene.net
 Version 2.9.98   11/XX/2008 
 -----------------------------------------------------------------------
 
+* Fixed bug where the display of the popup was truncated if the window
+was scrolled down from the top.
+
 * relationships in print?
 * change history in print?
 * images in print?
